Updates made to task's list to focus in other components

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,1 +1,1 @@
-Add a homepage for project with a link to Login/Register app (assigned to: navitux)
+Add a Login/Register app and link it with the homepage allowing to students and teachers see their personal dashboard and general info.
