The UsersData/admin.py file was modified to add its models to django admin interface, The user accounts are available now and the login, signup and logout can be performed successfully, the initial front-end forms to add courses and course's types are now available with backend process pending

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,1 +1,1 @@
-Add a Login/Register app and link it with the homepage allowing to students and teachers see their personal dashboard and general info.
+Make an app to create courses
